# medicalapp

./: .dockerignore  .env  .env-sample  .gitignore  Dockerfile  Readme.md  conftest.py  db.sqlite3  docker-compose.yaml  manage.py  postman_collection.json  pyproject.toml  pytest.ini  test_api.py
common/: pydantic_models.py
data/db/base/1/: 1247  1247_fsm  1249  1249_fsm  1255  1255_fsm  1259  1259_fsm  2606  2608  2609  2609_fsm  2610  2610_fsm  2615  2618  2618_fsm  2658  2659  2662  2663  2673  2674  2675  2678  2679  2690  2691  2692  2693  2696  2703  2704  2836  2838  2838_fsm  2839  2841  3394  3455  (+7 more)
data/db/global/: 1260  1261  1262  pg_control  pg_internal.init
data/db/pg_stat/: pgstat.stat
hrecords/: apps.py  models.py  serializers.py  urls.py  views.py
hrecords/migrations/: 0001_initial.py  0002_initial.py
medicalapp/: asgi.py  config.py  errorhandler.py  logger.py  projconfig.py  settings-test.py  settings.py  urls.py  wsgi.py
medicalapp/common/: constants.py  pydantic_models.py
users/: admin.py  manager.py  models.py  serializers.py  urls.py  views.py
users/helpers/: token.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
